[package]
name = "webfileman_api"
version = "0.1.0"
authors = ["Garnet DeGelder <garnet@garnetdg.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-argon2 = "0.8"
